feat: 1.5M 用户与鉴权改进简化

--- a/pdm/eas.pdma.json
+++ b/pdm/eas.pdma.json
@@ -4,7 +4,7 @@
   "avatar": "",
   "version": "4.9.4",
   "createdTime": "2025-5-31 18:54:43",
-  "updatedTime": "2026-2-4 18:17:25",
+  "updatedTime": "2026-2-5 10:27:46",
   "dbConns": [],
   "profile": {
     "default": {
@@ -2864,10 +2864,10 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "user_id",
-          "defName": "用户ID",
+          "defKey": "session_id",
+          "defName": "用户凭据SessionID",
           "comment": "",
-          "len": "",
+          "len": 128,
           "scale": "",
           "primaryKey": false,
           "notNull": true,
@@ -2887,44 +2887,16 @@
           "attr8": "",
           "attr9": "",
           "id": "5E102036-AC62-42E3-888C-DFC35C19689D",
-          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0",
+          "type": "CHARACTER VARYING",
+          "domain": "",
+          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+        },
+        {
+          "defKey": "user_id",
+          "defName": "用户ID",
+          "comment": "",
           "type": "",
-          "domain": "3F9E08C8-96C1-4FD0-9F00-BEF0DB7FB7B9",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
-        },
-        {
-          "defKey": "token",
-          "defName": "Token",
-          "comment": "",
-          "len": 100,
-          "scale": "",
-          "primaryKey": false,
-          "notNull": true,
-          "autoIncrement": false,
-          "defaultValue": "",
-          "hideInGraph": false,
-          "refDict": "",
-          "extProps": {},
-          "notes": {},
-          "attr1": "",
-          "attr2": "",
-          "attr3": "",
-          "attr4": "",
-          "attr5": "",
-          "attr6": "",
-          "attr7": "",
-          "attr8": "",
-          "attr9": "",
-          "id": "9CC1FF2B-C61B-4BDC-AC63-54BA7C7CBC0F",
-          "baseType": "",
-          "type": "VARCHAR",
-          "domain": "",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
-        },
-        {
-          "defKey": "permissions",
-          "defName": "用户权限JSON",
-          "comment": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2932,6 +2904,7 @@
           "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
+          "domain": "6AF16962-271B-4EAD-A807-705E81F24B8C",
           "refDict": "",
           "extProps": {},
           "notes": {},
@@ -2944,16 +2917,14 @@
           "attr7": "",
           "attr8": "",
           "attr9": "",
-          "id": "D004D779-276A-4BBF-AAD9-377E4D2B37F2",
-          "baseType": "",
-          "type": "TEXT",
-          "domain": "",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+          "id": "6EF4E087-A572-4773-830A-4E89EBD464A4",
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D"
         },
         {
-          "defKey": "expires_at",
-          "defName": "过期时间",
+          "defKey": "root_id",
+          "defName": "所属企业ID",
           "comment": "",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2961,6 +2932,7 @@
           "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
+          "domain": "6AF16962-271B-4EAD-A807-705E81F24B8C",
           "refDict": "",
           "extProps": {},
           "notes": {},
@@ -2973,16 +2945,14 @@
           "attr7": "",
           "attr8": "",
           "attr9": "",
-          "id": "EDA1FB90-0013-4B75-A35C-D13C86E9B844",
-          "baseType": "",
-          "type": "DATETIME",
-          "domain": "",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+          "id": "4ADD9882-469B-4A2E-B1AE-26C100A132BD",
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D"
         },
         {
-          "defKey": "create_time",
-          "defName": "创建时间",
+          "defKey": "root_name",
+          "defName": "所属企业名",
           "comment": "",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2990,6 +2960,7 @@
           "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
+          "domain": "E8BE6EBB-CA13-475A-BBEE-6E54CB5815E5",
           "refDict": "",
           "extProps": {},
           "notes": {},
@@ -3002,16 +2973,14 @@
           "attr7": "",
           "attr8": "",
           "attr9": "",
-          "id": "FF87B886-804C-40D1-94A4-53600883C672",
-          "baseType": "",
-          "type": "DATETIME",
-          "domain": "",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+          "id": "47292EFF-38E1-4AC0-B199-78BB6FF76E1E",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0"
         },
         {
-          "defKey": "update_time",
-          "defName": "修改时间",
+          "defKey": "dept_id",
+          "defName": "所属部门ID",
           "comment": "",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -3019,6 +2988,7 @@
           "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
+          "domain": "6AF16962-271B-4EAD-A807-705E81F24B8C",
           "refDict": "",
           "extProps": {},
           "notes": {},
@@ -3031,17 +3001,41 @@
           "attr7": "",
           "attr8": "",
           "attr9": "",
-          "id": "16F4FE90-5A28-421D-8EBF-FF9B70991B86",
-          "baseType": "",
-          "type": "DATETIME",
-          "domain": "",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+          "id": "2A23BE51-1B5D-4684-85EB-A98820F94CDD",
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D"
+        },
+        {
+          "defKey": "dept_name",
+          "defName": "所属部门名",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "domain": "E8BE6EBB-CA13-475A-BBEE-6E54CB5815E5",
+          "refDict": "",
+          "extProps": {},
+          "notes": {},
+          "attr1": "",
+          "attr2": "",
+          "attr3": "",
+          "attr4": "",
+          "attr5": "",
+          "attr6": "",
+          "attr7": "",
+          "attr8": "",
+          "attr9": "",
+          "id": "4E9C6138-C43A-46DD-A5FB-F90FA093DD80",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0"
         },
         {
           "defKey": "company_id",
           "defName": "公司ID",
           "comment": "",
-          "domain": "3F9E08C8-96C1-4FD0-9F00-BEF0DB7FB7B9",
           "type": "",
           "len": "",
           "scale": "",
@@ -3050,7 +3044,10 @@
           "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
+          "domain": "6AF16962-271B-4EAD-A807-705E81F24B8C",
           "refDict": "",
+          "extProps": {},
+          "notes": {},
           "attr1": "",
           "attr2": "",
           "attr3": "",
@@ -3060,10 +3057,120 @@
           "attr7": "",
           "attr8": "",
           "attr9": "",
-          "id": "50020D14-DCEC-400D-BADD-925D3F08945A",
-          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
+          "id": "9CC20460-871D-4684-A74F-A2E590AE6C4A",
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D"
+        },
+        {
+          "defKey": "permissions",
+          "defName": "用户权限代码JSON",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "domain": "6EDF7824-209D-43F3-AE9D-02247D33147B",
+          "refDict": "",
           "extProps": {},
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+          "notes": {},
+          "attr1": "",
+          "attr2": "",
+          "attr3": "",
+          "attr4": "",
+          "attr5": "",
+          "attr6": "",
+          "attr7": "",
+          "attr8": "",
+          "attr9": "",
+          "id": "F115B039-6355-448A-9FD4-C64621A2C6D2",
+          "baseType": "2F88EAF9-55AD-4118-AD4B-CF341ECC9A4D"
+        },
+        {
+          "defKey": "expires_at",
+          "defName": "过期时间",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
+          "refDict": "",
+          "extProps": {},
+          "notes": {},
+          "attr1": "",
+          "attr2": "",
+          "attr3": "",
+          "attr4": "",
+          "attr5": "",
+          "attr6": "",
+          "attr7": "",
+          "attr8": "",
+          "attr9": "",
+          "id": "60A25657-8C32-46DE-B58F-605332F564D3",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5"
+        },
+        {
+          "defKey": "create_time",
+          "defName": "创建时间",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
+          "refDict": "",
+          "extProps": {},
+          "notes": {},
+          "attr1": "",
+          "attr2": "",
+          "attr3": "",
+          "attr4": "",
+          "attr5": "",
+          "attr6": "",
+          "attr7": "",
+          "attr8": "",
+          "attr9": "",
+          "id": "E6B7CBDE-7E59-41C7-B088-8D128190F336",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5"
+        },
+        {
+          "defKey": "update_time",
+          "defName": "修改时间",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
+          "refDict": "",
+          "extProps": {},
+          "notes": {},
+          "attr1": "",
+          "attr2": "",
+          "attr3": "",
+          "attr4": "",
+          "attr5": "",
+          "attr6": "",
+          "attr7": "",
+          "attr8": "",
+          "attr9": "",
+          "id": "CEE433A9-B220-43F8-B9AD-0EF406B311DD",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5"
         }
       ],
       "correlations": [],
