--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -16,9 +16,9 @@
     "@iconify/json": "^2.2.373",
     "@vue-office/docx": "^1.6.3",
     "@vue-office/excel": "^1.7.14",
-    "axios": "^1.8.4",
+    "axios": "1.12.0",
     "bootstrap-icons": "^1.11.3",
-    "element-plus": "^2.9.7",
+    "element-plus": "2.11.3",
     "hash-wasm": "^4.12.0",
     "json-editor-vue": "^0.18.1",
     "marked": "^15.0.7",
