feat: 1.5O#1 统一通知模块后端开发

--- a/projector.map.json
+++ b/projector.map.json
@@ -1,20 +1,20 @@
 {
-  "ptuln": "audit_login",
+  "ptuln": "notice_template",
   "imports": [
     "java.time.LocalDateTime"
   ],
-  "ptalcn": "auditlogin",
-  "ptstn": "AuditLogin",
-  "ptbcn": "AuditLogin",
-  "ptscn": "auditLogin",
-  "comment": "登录审计日志",
-  "ptaucn": "AUDITLOGIN",
+  "ptalcn": "noticetemplate",
+  "ptstn": "NoticeTemplate",
+  "ptbcn": "NoticeTemplate",
+  "ptscn": "noticeTemplate",
+  "comment": "通知模板表",
+  "ptaucn": "NOTICETEMPLATE",
   "fields": [
     {
       "pfscn": "id",
       "pfalcn": "id",
       "stdName": "Id",
-      "comment": "登录日志主键",
+      "comment": "主键ID",
       "pfuln": "id",
       "pfaucn": "ID",
       "type": "Long",
@@ -25,129 +25,73 @@
       "primaryKey": true
     },
     {
-      "pfscn": "userId",
-      "pfalcn": "userid",
-      "stdName": "UserId",
-      "comment": "用户ID",
-      "pfuln": "user_id",
-      "pfaucn": "USERID",
-      "type": "Long",
-      "pfstn": "UserId",
-      "pfbcn": "UserId",
+      "pfscn": "name",
+      "pfalcn": "name",
+      "stdName": "Name",
+      "comment": "模板名称",
+      "pfuln": "name",
+      "pfaucn": "NAME",
+      "type": "String",
+      "pfstn": "Name",
+      "pfbcn": "Name",
       "required": true,
       "seq": 1,
       "primaryKey": false
     },
     {
-      "pfscn": "username",
-      "pfalcn": "username",
-      "stdName": "Username",
-      "comment": "用户账号",
-      "pfuln": "username",
-      "pfaucn": "USERNAME",
+      "pfscn": "code",
+      "pfalcn": "code",
+      "stdName": "Code",
+      "comment": "模板唯一编码 (业务调用用)",
+      "pfuln": "code",
+      "pfaucn": "CODE",
       "type": "String",
-      "pfstn": "Username",
-      "pfbcn": "Username",
+      "pfstn": "Code",
+      "pfbcn": "Code",
       "required": true,
       "seq": 2,
       "primaryKey": false
     },
     {
-      "pfscn": "loginKind",
-      "pfalcn": "loginkind",
-      "stdName": "LoginKind",
-      "comment": "登录方式 0:用户名密码",
-      "pfuln": "login_kind",
-      "pfaucn": "LOGINKIND",
-      "type": "Integer",
-      "pfstn": "LoginKind",
-      "pfbcn": "LoginKind",
+      "pfscn": "content",
+      "pfalcn": "content",
+      "stdName": "Content",
+      "comment": "模板内容 (含占位符)",
+      "pfuln": "content",
+      "pfaucn": "CONTENT",
+      "type": "String",
+      "pfstn": "Content",
+      "pfbcn": "Content",
       "required": true,
       "seq": 3,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "ipAddr",
-      "pfalcn": "ipaddr",
-      "stdName": "IpAddr",
-      "comment": "登录 IP",
-      "pfuln": "ip_addr",
-      "pfaucn": "IPADDR",
-      "type": "String",
-      "pfstn": "IpAddr",
-      "pfbcn": "IpAddr",
-      "required": true,
-      "seq": 4,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "location",
-      "pfalcn": "location",
-      "stdName": "Location",
-      "comment": "IP 归属地",
-      "pfuln": "location",
-      "pfaucn": "LOCATION",
-      "type": "String",
-      "pfstn": "Location",
-      "pfbcn": "Location",
-      "required": true,
-      "seq": 5,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "browser",
-      "pfalcn": "browser",
-      "stdName": "Browser",
-      "comment": "浏览器/客户端指纹",
-      "pfuln": "browser",
-      "pfaucn": "BROWSER",
-      "type": "String",
-      "pfstn": "Browser",
-      "pfbcn": "Browser",
-      "required": true,
-      "seq": 6,
-      "primaryKey": false
-    },
-    {
-      "pfscn": "os",
-      "pfalcn": "os",
-      "stdName": "Os",
-      "comment": "操作系统",
-      "pfuln": "os",
-      "pfaucn": "OS",
-      "type": "String",
-      "pfstn": "Os",
-      "pfbcn": "Os",
-      "required": true,
-      "seq": 7,
       "primaryKey": false
     },
     {
       "pfscn": "status",
       "pfalcn": "status",
       "stdName": "Status",
-      "comment": "状态: 0:成功 1:失败",
+      "comment": "状态: 0启用, 1禁用",
       "pfuln": "status",
       "pfaucn": "STATUS",
-      "type": "String",
+      "type": "Integer",
       "pfstn": "Status",
       "pfbcn": "Status",
       "required": true,
-      "seq": 8,
+      "seq": 4,
       "primaryKey": false
     },
     {
-      "pfscn": "message",
-      "pfalcn": "message",
-      "stdName": "Message",
-      "comment": "提示消息",
-      "pfuln": "message",
-      "pfaucn": "MESSAGE",
+      "pfscn": "remark",
+      "pfalcn": "remark",
+      "stdName": "Remark",
+      "comment": "备注",
+      "pfuln": "remark",
+      "pfaucn": "REMARK",
       "type": "String",
-      "pfstn": "Message",
-      "pfbcn": "Message",
-      "required": true,
-      "seq": 9,
+      "pfstn": "Remark",
+      "pfbcn": "Remark",
+      "required": false,
+      "seq": 5,
       "primaryKey": false
     },
     {
@@ -161,9 +105,65 @@
       "pfstn": "CreateTime",
       "pfbcn": "CreateTime",
       "required": true,
+      "seq": 6,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "creatorId",
+      "pfalcn": "creatorid",
+      "stdName": "CreatorId",
+      "comment": "创建人ID",
+      "pfuln": "creator_id",
+      "pfaucn": "CREATORID",
+      "type": "Long",
+      "pfstn": "CreatorId",
+      "pfbcn": "CreatorId",
+      "required": true,
+      "seq": 7,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "updateTime",
+      "pfalcn": "updatetime",
+      "stdName": "UpdateTime",
+      "comment": "更新时间",
+      "pfuln": "update_time",
+      "pfaucn": "UPDATETIME",
+      "type": "LocalDateTime",
+      "pfstn": "UpdateTime",
+      "pfbcn": "UpdateTime",
+      "required": true,
+      "seq": 8,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "updaterId",
+      "pfalcn": "updaterid",
+      "stdName": "UpdaterId",
+      "comment": "更新人ID",
+      "pfuln": "updater_id",
+      "pfaucn": "UPDATERID",
+      "type": "Long",
+      "pfstn": "UpdaterId",
+      "pfbcn": "UpdaterId",
+      "required": true,
+      "seq": 9,
+      "primaryKey": false
+    },
+    {
+      "pfscn": "deleteTime",
+      "pfalcn": "deletetime",
+      "stdName": "DeleteTime",
+      "comment": "删除时间 NULL未删",
+      "pfuln": "delete_time",
+      "pfaucn": "DELETETIME",
+      "type": "LocalDateTime",
+      "pfstn": "DeleteTime",
+      "pfbcn": "DeleteTime",
+      "required": false,
       "seq": 10,
       "primaryKey": false
     }
   ],
-  "seq": 0
+  "seq": 2
 }
