--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -20,6 +20,7 @@
     "bootstrap-icons": "^1.11.3",
     "element-plus": "2.11.3",
     "hash-wasm": "^4.12.0",
+    "highlight.js": "^11.11.1",
     "json-editor-vue": "^0.18.1",
     "marked": "^15.0.7",
     "monaco-editor-vue3": "^0.1.10",
